--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,5 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "Todo_List_App"
+rootProject.name = "Test_Todo"
 include ':app'
