--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-kapt'
-}
-ext{
-    roomVersion = "2.3.0"
+    id  'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -12,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.marah.test_todo"
-        minSdk 25
+        minSdk 29
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -33,22 +31,35 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
-    //Room
-    implementation("androidx.room:room-runtime:2.3.0")
-    implementation("androidx.room:room-ktx:2.3.0")
-    kapt("androidx.room:room-compiler:2.3.0")
+  //  val lifecycle_version = '2.4.0-rc01'
+
     // Coroutines Library
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
-    // Lifecycle
+
+    // Lifecycle + ViewModel & LiveData
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    //implementation "androidx.arch.lifecycle:common-java8:2.3.1"
+    implementation("androidx.lifecycle:lifecycle-common-java8:2.4.0-rc01")
+
+    implementation "androidx.room:room-ktx:2.3.0"
+    implementation "androidx.room:room-runtime:2.3.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    kapt("androidx.room:room-compiler:2.3.0")
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
